--- a/openvino_face_detect/Dockerfile
+++ b/openvino_face_detect/Dockerfile
@@ -2,7 +2,14 @@ FROM byangintel/centos_openvino
 MAINTAINER bin.yang@intel.com
 WORKDIR /opt/openvino
 
-COPY openvino_face_detect/entrypoint.sh /opt/openvino/
+RUN yum install -y -q python-flask
 
-ENTRYPOINT ["/usr/local/bin/tini", "-g", "/opt/openvino/entrypoint.sh", "--"]
-CMD ["/bin/bash"]
+COPY openvino_face_detect/face_detect /opt/face_detect
+RUN cd /opt/face_detect/ \
+	&& mkdir build \
+	&& cd build \
+	&& source /opt/intel/computer_vision_sdk/bin/setupvars.sh \
+	&& cmake -DCMAKE_BUILD_TYPE=Release ../ \
+	&& make -j$(nproc)
+
+ENTRYPOINT ["/usr/local/bin/tini", "-g", "/opt/face_detect/face_detect.sh", "--"]
