--- a/edgex-pi-demo-arm64/docker-compose.yml
+++ b/edgex-pi-demo-arm64/docker-compose.yml
@@ -240,7 +240,7 @@ services:
       - "49991:49991"
     environment:
       - MQTT_BROKER_ADDR=<broker ip>
-      - OUTPUT_STREAM=http://<ffserver ip>:<ffserver port>/camera.ffm
+      - OUTPUT_STREAM=http://<ffserver ip>:49999/camera.ffm
     container_name: edgex-device-grove
     hostname: edgex-device-grove
     networks:
