--- a/edgex-pi-demo-arm64/host-docker-compose.yml
+++ b/edgex-pi-demo-arm64/host-docker-compose.yml
@@ -14,19 +14,21 @@ services:
     networks:
       - edgex-network
 
-  ffserver:
-    image: byangintel/ffserver
+  stream_mux:
+    image: byangintel/stream_mux
+    environment:
+      - INPUT_STREAM=http://<Pi board ip>:49990
     ports:
       - "49999:49990"
-    container_name: ffserver
-    hostname: ffserver
+    container_name: stream_mux
+    hostname: stream_mux
     networks:
       - edgex-network
 
   openvino_face_detect-cpu:
     image: byangintel/openvino-face_detect-centos
     environment:
-      - INPUT_STREAM=http://ffserver:49990/camera.mjpeg
+      - INPUT_STREAM=http://stream_mux:49990
     ports:
       - "49990:49990"
     container_name: openvino_face_detect-cpu
@@ -37,7 +39,7 @@ services:
   openvino_face_detect-gpu:
     image: byangintel/openvino-face_detect-centos
     environment:
-      - INPUT_STREAM=http://ffserver:49990/camera.mjpeg
+      - INPUT_STREAM=http://stream_mux:49990
       - TARGET=GPU
     ports:
       - "49991:49990"
@@ -52,7 +54,7 @@ services:
   openvino_face_detect-myriad:
     image: byangintel/openvino-face_detect-centos
     environment:
-      - INPUT_STREAM=http://ffserver:49990/camera.mjpeg
+      - INPUT_STREAM=http://stream_mux:49990
       - TARGET=MYRIAD
     ports:
       - "49992:49990"
